Stretch to width, but never make the width:height ratio less than one. Directly scale path coords to a non-100x100 viewBox in preparation for adding fixed size things. Remove body margin.

--- a/app.css
+++ b/app.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Helvetica Neue';
   background-color: black;
+  margin: 0;
 }
 
 .hidden {
